--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/server.js",
-    "devstart": "nodemon src/server.ts",
+    "dev": "nodemon src/server.ts",
     "build":"tsc -p ."
   },
   "author": "",
